--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
 body {
   font-family: 'Open Sans', sans-serif;
 }
-
-/*-----Default Desktop Layout-----*/
+/*----------start default desktop layout----------*/
 section {
   float: left;
+  height: 100vh;
   width: 50%;
 }
-/*----start user input section styles----*/
+/*----------start input section styles----------*/
 .input-section {
   background-color: #455A64;
 }
@@ -31,16 +31,19 @@ h1 {
 }
 .user-form-input {
   display: block;
+  font-size: 1.8rem;
   height: 2.6rem;
   margin: 0 auto;
   margin-top: 3.1rem;
+  padding: .6rem;
   width: 87.5%;
 }
-
-/*--start enter button styles--*/
+/*----------start enter button styles----------*/
 .enter-button {
   background-color: #CFD8DC;
   color: #FFF;
+  font-size: 1rem;
+  font-weight: 800;
   height: 2.27rem;
   margin-bottom: 11.9rem;
   margin-top: 3.2rem;
@@ -51,11 +54,28 @@ h1 {
 .enable-button {
   background-color: #FFC107;
 }
-/*--end enter button styles--*/
-
-
-
-/*----end user input section styles*/
+/*----------end enter button styles----------*/
+/*----------end input section styles----------*/
+/*----------start card section styles----------*/
 .card-section {
   background-color: #CFD8DC;
+}
+article {
+  background-color: #FFF;
+  border: thin solid #607D8B;
+  margin-left: 3.4%;
+  width: 94%;
+  height: 5rem;
+}
+.delete-button {
+  float: right;
+}
+/*----------end card section styles----------*/
+/*----------end default desktop layout----------*/
+/*----------layout changes for mobile----------*/
+@media screen and (max-width: 57rem) {
+  section {
+    height: 100%;
+    width: 100%;
+  }
 }
